--- a/webexam2024/index.html
+++ b/webexam2024/index.html
@@ -40,12 +40,56 @@
             </section>
             <section id="grid-container-products">
                 <h2 class="productHeader">Våre mest populære produkter</h2>
-                <p class="productHeader">Oppdag det beste av det beste</p>
-                <div>
+                <p class="productUnderText">Oppdag det beste av det beste</p>
+                <nav class="buttonsFlexContainer">
                     <button class="productButton">New Products</button>
                     <button class="productButton">Special Price</button>
                     <button class="productButton">Best Sellers</button>
-                </div>  
+                </nav>  
+                <div class="productArticleFlexContainer">
+                    <article>
+                        <figure class="productImage">
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <figcaption>Product name</figcaption>
+                        </figure>
+                        <p>Kr 1999</p>
+                    </article>
+                    <article>
+                        <figure class="productImage">
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <figcaption>Product name</figcaption>
+                        </figure>
+                        <p>Kr 1999</p>
+                    </article>
+                    <article>
+                        <figure class="productImage">
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <figcaption>Product name</figcaption>
+                        </figure>
+                        <p>Kr 1999</p>
+                    </article>
+                    <article>
+                        <figure class="productImage">
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <figcaption>Product name</figcaption>
+                        </figure>
+                        <p>Kr 1999</p>
+                    </article>
+                    <article>
+                        <figure class="productImage">
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <figcaption>Product name</figcaption>
+                        </figure>
+                        <p>Kr 1999</p>
+                    </article>
+                                        <article>
+                        <figure class="productImage">
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <figcaption>Product name</figcaption>
+                        </figure>
+                        <p>Kr 1999</p>
+                    </article>
+                </div>
             </section>
         </main>
         <footer>
