--- a/webexam2024/index.html
+++ b/webexam2024/index.html
@@ -22,9 +22,9 @@
                     <li class="listFlex"><a href="">Kontakt oss</a></li>
                 </ul>
                 <ul class="headerNavIconFlex">
-                    <li class="listFlex"><a href=""><img src="userIcon.png" alt="usertIcon"></a></li>
-                    <li class="listFlex"><a href=""><img src="heartIcon.png" alt="heartIcon"></a></li>
-                    <li class="listFlex"><a href=""><img src="cartIcon.png" alt="cartIcon"></a></li>
+                    <li class="listFlex"><a href=""><img src="userIcon.png" alt="user icon"></a></li>
+                    <li class="listFlex"><a href=""><img src="heartIcon.png" alt="heart icon"></a></li>
+                    <li class="listFlex"><a href=""><img src="cartIcon.png" alt="cart icon"></a></li>
                 </ul>
             </nav>
         </header>
@@ -39,8 +39,8 @@
                 </article>
             </section>
             <section id="grid-container-products">
-                <h2 class="productHeader">Våre mest populære produkter</h2>
-                <p class="productUnderText">Oppdag det beste av det beste</p>
+                <h2 class="productHeader headText">Våre mest populære produkter</h2>
+                <p class="productUnderText underText">Oppdag det beste av det beste</p>
                 <nav class="buttonsFlexContainer">
                     <button class="productButton">New Products</button>
                     <button class="productButton">Special Price</button>
@@ -49,45 +49,115 @@
                 <div class="productArticleFlexContainer">
                     <article>
                         <figure class="productImage">
-                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
                             <figcaption>Product name</figcaption>
                         </figure>
                         <p>Kr 1999</p>
                     </article>
                     <article>
                         <figure class="productImage">
-                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
                             <figcaption>Product name</figcaption>
                         </figure>
                         <p>Kr 1999</p>
                     </article>
                     <article>
                         <figure class="productImage">
-                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
                             <figcaption>Product name</figcaption>
                         </figure>
                         <p>Kr 1999</p>
                     </article>
                     <article>
                         <figure class="productImage">
-                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
                             <figcaption>Product name</figcaption>
                         </figure>
                         <p>Kr 1999</p>
                     </article>
                     <article>
                         <figure class="productImage">
-                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
                             <figcaption>Product name</figcaption>
                         </figure>
                         <p>Kr 1999</p>
                     </article>
                                         <article>
                         <figure class="productImage">
-                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="productImage"><img/>
+                            <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
                             <figcaption>Product name</figcaption>
                         </figure>
                         <p>Kr 1999</p>
+                    </article>
+                </div>
+            </section>
+            <section>
+                <h2 class="headText">Våre mest populære kategorier</h2>
+                <p class="underText">Oppdag det beste av det beste</p>
+                <div class="categoryFlexContainer">
+                    <article class="categoryItem">
+                        <h2>Category 1</h2>
+                    </article>
+                    <article class="categoryItem">
+                        <h2>Category 2</h2>
+                    </article>
+                    <article class="categoryItem2">
+                        <h2>Category 3</h2>
+                    </article>
+                    <article class="categoryItem">
+                        <h2>Category 4</h2>
+                    </article>
+                    <article class="categoryItem">
+                        <h2>Category 5</h2>
+                    </article>
+                </div>
+            </section>
+            <section>
+                <h2 class="headText">Anmeldelser</h2>
+                <div class="reviewsFlexContainer">
+                    <article class="reviewsFlexItem">
+                        <figure>
+                            <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture"><img/>
+                        </figure>
+                        <h3>Rober Labrador</h3>
+                        <p>Suspendisse ullamcorper eget ad praesent sodales maximus dolor. Volutpat blandit sollicitudin 
+                            quisque montes felis ut; id est auctor. Luctus nulla id primis lacus fames posuere. Vivamus varius 
+                            class nisi libero hendrerit scelerisque ridiculus. Facilisis maecenas volutpat donec; dis 
+                            sapien blandit fringilla. Hendrerit tincidunt ante morbi nascetur nisi interdum class lectus.
+                             Donec fringilla himenaeos integer justo velit integer proin ad.</p>
+                    </article>
+                    <article class="reviewsFlexItem">
+                        <figure>
+                            <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture"><img/>
+                        </figure>
+                        <h3>Rober Labrador</h3>
+                        <p>Suspendisse ullamcorper eget ad praesent sodales maximus dolor. Volutpat blandit sollicitudin 
+                            quisque montes felis ut; id est auctor. Luctus nulla id primis lacus fames posuere. Vivamus varius 
+                            class nisi libero hendrerit scelerisque ridiculus. Facilisis maecenas volutpat donec; dis 
+                            sapien blandit fringilla. Hendrerit tincidunt ante morbi nascetur nisi interdum class lectus.
+                             Donec fringilla himenaeos integer justo velit integer proin ad.</p>
+                    </article>
+                    <article class="reviewsFlexItem">
+                        <figure>
+                            <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture"><img/>
+                        </figure>
+                        <h3>Rober Labrador</h3>
+                        <p>Suspendisse ullamcorper eget ad praesent sodales maximus dolor. Volutpat blandit sollicitudin 
+                            quisque montes felis ut; id est auctor. Luctus nulla id primis lacus fames posuere. Vivamus varius 
+                            class nisi libero hendrerit scelerisque ridiculus. Facilisis maecenas volutpat donec; dis 
+                            sapien blandit fringilla. Hendrerit tincidunt ante morbi nascetur nisi interdum class lectus.
+                             Donec fringilla himenaeos integer justo velit integer proin ad.</p>
+                    </article>
+                    <article class="reviewsFlexItem">
+                        <figure>
+                            <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture"><img/>
+                        </figure>
+                        <h3>Rober Labrador</h3>
+                        <p>Suspendisse ullamcorper eget ad praesent sodales maximus dolor. Volutpat blandit sollicitudin 
+                            quisque montes felis ut; id est auctor. Luctus nulla id primis lacus fames posuere. Vivamus varius 
+                            class nisi libero hendrerit scelerisque ridiculus. Facilisis maecenas volutpat donec; dis 
+                            sapien blandit fringilla. Hendrerit tincidunt ante morbi nascetur nisi interdum class lectus.
+                             Donec fringilla himenaeos integer justo velit integer proin ad.</p>
                     </article>
                 </div>
             </section>
