furtherProgress on footer

--- a/webexam2024/index.html
+++ b/webexam2024/index.html
@@ -15,9 +15,9 @@
         <nav>
             <ul class="headerNavFlex">
                 <li class="listFlex"><a href="index.html">Hjem</a></li>
-                <li class="listFlex"><a href="">Produkter</a></li>
+                <li class="listFlex"><a href="products.html">Produkter</a></li>
                 <li class="logoFlex"><a href="index.html">Logo</a></li>
-                <li class="listFlex"><a href="">Kategorier</a></li>
+                <li class="listFlex"><a href="categories.html">Kategorier</a></li>
                 <li class="listFlex"><a href="">Kontakt oss</a></li>
             </ul>
             <ul class="headerNavIconFlex">
@@ -162,7 +162,23 @@
         </section>
     </main>
     <footer>
-        <h2 class="headText">Logo</h2>
+        <hr>
+        <h2 class="headText mediumBold">Logo</h2>
         <p class="underText">Suspendisse ullamcorper eget ad praesent sodales maximus dolor.</p>
+        <address class="contactInfoFlexContainer">
+            <h2 class="headText mediumBold marginTop">Kontakt</h2>
+            <img class="iconSize" src="addressIcon.png" alt="address icon">
+                <p class="underText lightBold removeMargin"><b>Adresse:</b> B R A Veien 4, 1757 Halden</p>
+            <img/>
+            <img class="iconSize" src="phoneIcon.png" alt="phone icon">
+                <p class="underText lightBold removeMargin"><b>Telefon:</b> <a href="tel:69 60 80 00">69 60 80 00</a></p>
+            <img/>
+            <img class="iconSize" src="emailIcon.png" alt="email icon">
+                <p class="underText lightBold removeMargin"><b>E-post:</b> <a href="mailto:halden@hiof.no">halden@hiof.no</a></p>
+            <img/>
+            <img class="iconSize" src="clockIcon.png" alt="clock icon">
+                <p class="underText lightBold removeMargin"><b>Åpningstider:</b> Stenger 15:00</p>
+            <img/>
+        </address>
     </footer>
 </body>
