--- a/webexam2024/index.html
+++ b/webexam2024/index.html
@@ -116,7 +116,7 @@
             <div class="reviewsFlexContainer">
                 <article class="reviewsFlexItem">
                     <figure>
-                        <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture">
+                        <img class="maxWidth150" src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture">
                     </figure>
                     <h3>Rober Labrador</h3>
                     <p>Suspendisse ullamcorper eget ad praesent sodales maximus dolor. Volutpat blandit sollicitudin 
@@ -127,7 +127,7 @@
                 </article>
                 <article class="reviewsFlexItem">
                     <figure>
-                        <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture">
+                        <img class="maxWidth150" src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture">
                     </figure>
                     <h3>Rober Labrador</h3>
                     <p>Suspendisse ullamcorper eget ad praesent sodales maximus dolor. Volutpat blandit sollicitudin 
@@ -138,7 +138,7 @@
                 </article>
                 <article class="reviewsFlexItem">
                     <figure>
-                        <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture">
+                        <img class="maxWidth150" src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture">
                     </figure>
                     <h3>Rober Labrador</h3>
                     <p>Suspendisse ullamcorper eget ad praesent sodales maximus dolor. Volutpat blandit sollicitudin 
